# bal_problem

./: CMakeLists.txt  README.md
common/: common.cpp  common.h  random.h  rotation.h
example/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp
include/: backend.h  edge.h  eigen_types.h  loss_function.h  problem.h  vertex.h  vertex_point_xyz.h  vertex_pose.h
src/: edge.cc  problem.cc  vertex.cc  vertex_pose.cc
test/: CMakeLists.txt  test_backend.cpp
